# husqvarna-automower-dashboard

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  compose.dev.yaml  compose.mcp.yaml  compose.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml
collector/: .dockerignore  Dockerfile  collector.py  errorcodes.py  husqvarna.py  probe.py  pyproject.toml  simulator.py
docs/: api-reference.md
grafana/: Dockerfile  docker-entrypoint.sh
grafana/dashboards/: automower.json
grafana/provisioning/dashboards/: provider.yaml
grafana/provisioning/datasources/: influxdb.yaml
